# dataforseo_sdk

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: code-linting.yml  dependency-review.yml  python-package.yml  unit-tests.yml
dataforseo_sdk/: __init__.py  cli.py  config.py  dfs_service.py
dataforseo_sdk/api_client/: __init__.py  api_client.py  api_client_mixin.py  api_credentials.py  api_credentials_factory.py  rest_client.py
dataforseo_sdk/competitors/: competitor_service.py
dataforseo_sdk/keywords/: keyword_service.py
dataforseo_sdk/locations/: location_mixin.py  location_service.py
docs/: .gitignore  Makefile  conf.py  dataforseo_sdk.api_client.rst  dataforseo_sdk.competitors.rst  dataforseo_sdk.keywords.rst  dataforseo_sdk.locations.rst  dataforseo_sdk.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  test_dataforseo_sdk.py  test_dfs_service.py
tests/api_client/: test_api_client.py  test_api_client_mixin.py  test_api_credentials.py  test_api_credentials_factory.py  test_rest_client.py
tests/competitors/: test_competitor_service.py
tests/keywords/: test_keyword_service.py
tests/keywords/data/: api.dataforseo.com.v3-dataforseo_labs-ranked_keywords-live.20220225T163613.078371.json
tests/locations/: test_location_mixin.py  test_location_service.py
tests/locations/data/: api.dataforseo.com.v3-dataforseo_labs-locations_and_languages.20220301T082139.560537.json
